# CCAKE

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Kokkos_install.sh  LICENSE  README.md  README_1+1D.md  bootstrap.sh  build_all.sh  changed_files_vUSPhydro2_BSQ-Hydro-master.txt  eval_diff.sh  full_diff_vUSPhydro2_BSQ-Hydro-master.txt  run_Gubser_checks.sh  submit_batches.sh  submit_example_job.sh
CCAKE/: .gitignore  CMakeLists.txt  Doxyfile  Input_Parameters_Gubser_checks.inp  bootstrap.sh  build_all.sh  make_plots.sh  submit_example_job.sh
CCAKE/Hydro-master/: check_rootfinder.nb  eostables.h  hydrosim.cpp  random.h
CCAKE/Hydro-master/convert_to_hdf/: convert_to_hdf.cpp
CCAKE/Hydro-master/df/: mathdef.h  tables.h  vector.cpp  vector.h
CCAKE/Hydro-master/df/decays/: functions.cpp  int.h
CCAKE/Hydro-master/inputfiles/: eccCM.cpp
CCAKE/Hydro-master/manual/V1/: README_ORGANIZATION.txt
CCAKE/Hydro-master/manual/V1/initial conditions/: README_TRENTO.txt
CCAKE/Hydro-master/manual/lat_visc/: visc.tex
CCAKE/dependencies/: build_dependencies.sh
CCAKE/include/: BSQHydro.h  bbmg.h  config.h.in  constants.h  defaults.h  densities.h  eom.h  eom_default.h  eos.h  eos_conformal_cosh.h  eos_conformal_diagonal.h  eos_interpolator.h  eos_table.h  eos_tanh_conformal.h  evolver.h  freeze_out.h  hydrodynamic_info.h  input.h  input_output.h  interface_to_HDF5.h  interpolatorND.h  kernel.h  linklist.h  mathdef.h  matrix.h  milne.hpp  output.h  particle.h  point_in_simplex.h  rootfinder.h  settings.h  sph_workstation.h  stopwatch.h  system_state.h  thermodynamic_info.h  transport_coefficients.h  utilities.h  vector.h  welcome.h
CCAKE/input/: Input_Parameters.inp  Input_Parameters_XXX.inp  Input_Parameters_example.inp  Input_Parameters_generator.inp  Input_Parameters_trento.inp  input_parameters_ccake.yaml  input_parameters_gubser_checks.yaml  input_parameters_iccing.yaml
CCAKE/misc/Gubser_checks/: plot_gubser_profiles.py
CCAKE/misc/interpolator4D/: interpolator4D.h
CCAKE/misc/interpolatorND/: tmp.cpp  tmp2.cpp
CCAKE/misc/old_unneeded_code/: equations_of_motion.cpp
CCAKE/misc/plotting_scripts/: ConformalGubserCheck.nb
CCAKE/misc/read_in_hdf/: GNUmakefile  read_in_hdf.cpp
CCAKE/my_tests/: config_long.yaml
CCAKE/plotting_scripts/: make_density_plots.sh  make_eccentricity_plots.sh  make_movie.sh  make_trajectory_plots.sh  plot_gubser.py
CCAKE/src/: BSQHydro.cpp  CMakeLists.txt  ccake.cpp  ccake.dot  eom_default.cpp  eos.cpp  eos_checks.cpp  eos_derivatives.cpp  eos_extension.cpp  eos_initialization.cpp  eos_interpolator.cpp  eos_table.cpp  evolver.cpp  formatted_output.cpp  input.cpp  input.dot  input_output.cpp  interpolatorND.cpp  kernel.cpp  linklist.cpp  matrix.cpp  output.cpp  particle.cpp  sph_workstation.cpp  system_state.cpp  transport_coefficients.cpp  utilities.cpp  vector.cpp
CCAKE/unit_tests/: eom_default_test.cpp  grad_smoothing_test.cpp  input_test.cpp  kernel_test.cpp  smoothing_test.cpp  vector_test.cpp
CCAKE/utilities/: generate_eos_table.cpp  gubser_ic_converter.py  gubser_ic_generator.py  long_ic_generator.py  validate_interpolator.cpp
CCAKE_w_CMake/: CMakeLists.txt  Makefile
CCAKE_w_CMake/include/: defaults.h  eom_default.h  eos.h  eos_conformal_extension.h  eos_table.h  formatted_output.h  kernel.h  linklist.h  system_state.h
CCAKE_w_CMake/input/: Input_Parameters.inp  Input_Parameters_Gubser_checks.inp  Input_Parameters_generator.inp
CCAKE_w_CMake/misc/old_unneeded_code/eos_v1/: eos.h
CCAKE_w_CMake/misc/plotting_scripts/: animate_EoSs.py  compare_timesteps.py  plot_profile.py
CCAKE_w_CMake/plotting_scripts/: make_movies.sh
CCAKE_w_CMake/src/: CMakeLists.txt  eos.cpp  eos_delaunay.cpp  eos_initialization.cpp  eos_table.cpp  input_output.cpp  interpolatorND.cpp  linklist.cpp  particle.cpp  point_in_simplex.cpp  sph_workstation.cpp
EoS-Library/: GNUmakefile  eos.cpp  eos.h  test.cpp
EoS_BQS_Derivatives/: BSQ_Deriv_checks.nb  README.md  makefile  non_conformal_EoS_extension.nb  non_conformal_EoS_extension_checks.nb  non_conformal_EoS_extension_v2.nb  run.sh
Hydro-master/: GNUmakefile  LinkList.cpp  LinkList.h  Makefile  Makefile-old  README.md  bbmg.h  charm.sh  check_rootfinder.nb  cleancompile.sh  convert_SPH_to_physical.cpp  convert_to_hdf.cpp  convert_to_hdf.h  enteric.cpp  enteric.h  eos.cpp  eos.h  eostables.h  generate_converted_profiles.sh  generate_profile_evolution.sh  gradKernelChecks.nb  hydrosim.cpp  hydrosim.h  main.cpp  mathdef.h  matrix.cpp  matrix.h  newspline.cpp  newspline.hpp  output.h  particle.cpp  particle.h  pis.sh  plot_profile.py  plot_profile_SPH.py  random.cpp  readme.txt  readmeEoS.txt  run_test.sbatch  rungekutta4.h  (+5 more)
Interactive_CCAKE/: Input_Parameters_0.inp
OVERHAUL/: BSQHydro.cpp  BSQHydro.h  CPscratch.cpp  ConformalGubserCheck.nb  Dekra_scratch.cpp  EquationsOfMotion.h  Input_Parameters.inp  Input_Parameters_Gubser_checks.inp  Input_Parameters_XXX.inp  Input_Parameters_generator  Input_Parameters_generator.inp  Makefile  Makefile_new_eos  OLD_eos_extension.cpp  OLD_eos_extension.h  colors.h  compare_timesteps.py  constants.h  convert_SPH_to_physical.cpp  (+70 more)
cmake_tests/hello_test/: CMakeLists.txt
cmake_tests/whole_code/: CMakeLists.txt
cmake_tests/whole_code/src/: Stopwatch.h  eos_checks.cpp  eos_derivatives.cpp  eos_header.h  eos_nonconformal_extension.h  eos_table.cpp  input_output.h  kernel.cpp  linklist.cpp  persephone.cpp  runge_kutta.cpp  vector.h
cmake_tests/whole_code_v2/src/: CMakeLists.txt  eos.h  eos_initialization.cpp  eos_table.h  kernel.h  linklist.cpp  new_vector.h  particle.h  rootfinder.h  sph_workstation.cpp  system_state.cpp  system_state.h  transport_coefficients.h  vector.cpp
cmake_tests/whole_code_v2/src/eos_delaunay/: eos_delaunay.cpp  interpolate_ebsq.cpp
cmake_tests/whole_code_v2/src/interpolator4D/: interpolator4D.cpp
old_code/cmake_tests/gsl_test/: CMakeLists.txt
old_code/cmake_tests/gsl_test/src/: CMakeLists.txt
utilities/systemstate_interpolator/: CMakeLists.txt  main.cpp  system_state_int.cpp  system_state_int.h
(+497 files in other folders)
